# yew-demo

./: .gitpod.yml  Cargo.toml  NAVBAR_OPTIMIZATION.md  README.md  TODO.md  WEBRTC_ENHANCEMENT_PLAN.md  config.json  index.html  tailwind.config.js
.github/workflows/: yew.yml
src/: boids.rs  config.rs  gemini_chat.rs  gemini_chat_refactored.rs  main.rs  prompt_agent.rs  timer.rs  tomato_clock.rs  tutorial.rs
src/auth/: github.rs  mod.rs  pkce.rs
src/components/: callback.rs  home.rs  login.rs  mod.rs  navbar.rs  particle_simulation.rs  particle_system.rs
src/utils/: file_sharing.rs  mod.rs  qr_code.rs
src/webrtc_chat/: chat_model.rs  mod.rs  web_rtc_manager.rs
