[package]
name = "yew-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
js-sys = "0.3.77"
rand = "0.9.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "HtmlAudioElement", "HtmlCanvasElement",
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "Event",
    "HtmlInputElement",
    "DomRect",  
    "DomRectReadOnly",
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "MouseEvent",
    "DomRect",  ] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
pulldown-cmark = "0.12.0"

